# SIEVE

./: .editorconfig  CMakeLists.txt  Dockerfile  README.md  SIEVE.cpp  build.sh  run.sh
.github/workflows/: docker-image.yml  sieve.yml
